# crypto-project

./: README.md
quant-crypto-portfolio/: .gitignore  README.md  pyproject.toml
quant-crypto-portfolio/.github/workflows/: ci.yml
quant-crypto-portfolio/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
quant-crypto-portfolio/catboost_info/learn/: events.out.tfevents
quant-crypto-portfolio/configs/: collector.example.toml  dashboard.example.toml  logging.env.example
quant-crypto-portfolio/docs/: ARCHITECTURE.md  DASHBOARD.md  PERFORMANCE.md  REFRACTOR.md
quant-crypto-portfolio/src/quant_crypto_portfolio/: aggtrades.py  cli.py  collector_binance_ws.py  dashboard.py  dashboard_app.py  data_io.py  drift.py  ensemble.py  etl.py  features.py  logging_utils.py  offline_eval.py  online.py  orderbook.py  storage.py  strategy.py  time_utils.py  viz.py
quant-crypto-portfolio/tests/: conftest.py  test_aggtrades.py  test_data_io.py  test_drift.py  test_features.py  test_offline_eval_series.py  test_orderbook.py  test_storage_integration.py  test_strategy.py
